--- a/src/main/resources/dbcpconfig.properties
+++ b/src/main/resources/dbcpconfig.properties
@@ -1,11 +1,11 @@
 #连接设置
 driverClassName=com.mysql.jdbc.Driver
 #url=jdbc:mysql://localhost:3306/message
-url=jdbc:mysql://10.9.1.188:3306/cf_117e0bbf_c02e_49fc_8182_6fb5cc2874ca?user=jOUG5INhwWBDGsXm&password=S26CBXhFuJ5XBURk
+url=jdbc:mysql://10.9.1.188:3306/cf_117e0bbf_c02e_49fc_8182_6fb5cc2874ca?user=PKY6EOT46RhIMpq1&password=8l2SdPrYyzh7vfps
 #username=root
-username=jOUG5INhwWBDGsXm
+username=PKY6EOT46RhIMpq1
 #password=root
-password=S26CBXhFuJ5XBURk
+password=8l2SdPrYyzh7vfps
 
 
 #<!-- 初始化连接 -->
